--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -77,6 +77,7 @@ jobs:
             echo "build-number=${{ inputs.package-build-number }}" >> $GITHUB_OUTPUT
           fi
 
+        ## set full path for artifact (useful to define here because it is referenced multiple times later)
       - name: Set artifact path
         id: artifact-path
         run: echo "path=electron/dist/${{ inputs.artifact-name }}_${{ steps.generate-build-number.outputs.build-number }}_${{ inputs.os }}.${{ inputs.artifact-file-extension }}" >> $GITHUB_OUTPUT
@@ -98,7 +99,7 @@ jobs:
         working-directory: ./electron/idaes-flowsheet-processor-ui/frontend 
         run: npm clean-install
 
-      - name: Pip install backend repository
+      - name: Pip install ${{ inputs.pip-install-target }}
         run: pip install --progress-bar off ${{ inputs.pip-install-target }}
 
       - name: Get idaes extensions
