--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -14,10 +14,10 @@ on:
         default: exe
       project:
         type: string
-        required: true
+        default: watertap
       pip-install-target:
         type: string
-        required: true
+        default: watertap@git+https://github.com/watertap-org/watertap@main
       artifact-name:
           type: string
           default: ${{ inputs.project }}-Flowsheet-Processor
@@ -45,9 +45,6 @@ defaults:
   run:
     # -l: use login shell (required when using Conda)
     shell: bash -l {0}
-
-env:
-  PYTEST_ADDOPTS: --color=yes
 
 jobs:
   electron-build:
