--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -31,15 +31,29 @@ on:
         type: string
     secrets:
       AZURE_KEY_VAULT_URI:
-        required: true
+        required: false
       AZURE_CLIENT_ID:
-        required: true
+        required: false
       AZURE_TENANT_ID:
-        required: true
+        required: false
       AZURE_CLIENT_SECRET:
-        required: true
+        required: false
       AZURE_CERT_NAME:
-        required: true
+        required: false
+      APPLE_BUILD_CERTIFICATE_BASE64:
+        required: false
+      P12_PASSWORD:
+        required: false
+      KEYCHAIN_PASSWORD:
+        required: false
+      APPLE_ID:
+        required: false
+      APPLE_ID_PASSWORD:
+        required: false
+      NOTARIZE_TOOL:
+        required: false
+      TEAM_ID:
+        required: false
 
 defaults:
   run:
@@ -61,8 +75,33 @@ jobs:
           miniforge-version: latest
       
       - name: Install Azure Signtool
+        if: runner.os == 'Windows'
         run: |
           dotnet tool install --global AzureSignTool
+      
+    
+      - name: Install the Apple certificate
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
 
         ## use this for naming package
       - name: Generate Package Build Number
@@ -118,6 +157,11 @@ jobs:
         run: npm run build
 
       - name: Build ${{ inputs.os }} Distribution
+        env:
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
+          NOTARIZE_TOOL: ${{ secrets.NOTARIZE_TOOL }}
+          TEAM_ID: ${{ secrets.TEAM_ID }}
         working-directory: ./electron
         run: |
           if [ "${{ inputs.os }}" = "arm64" ]; then
