--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -81,6 +81,7 @@ jobs:
       
     
       - name: Install the Apple certificate
+        if: runner.os == 'macOS'
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
