--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -124,6 +124,10 @@ jobs:
         # run: git clone https://github.com/watertap-org/idaes-flowsheet-processor-ui.git && cd idaes-flowsheet-processor-ui && pip install --progress-bar off .
         run: git clone https://github.com/${{ inputs.idaes-flowsheet-processor-ui-repo }}.git && cd idaes-flowsheet-processor-ui && git fetch --all --tags && git checkout ${{ inputs.idaes-flowsheet-processor-ui-ref }} && pip install --progress-bar off .
 
+      - name: Install full set of dependencies
+        working-directory: ./electron/idaes-flowsheet-processor-ui/backend/requirements.txt
+        run: pip install --progress-bar off .
+
         ## creates package.json and .env files
       - name: Set configuration files
         run: python scripts/set_configuration.py -p ${{ inputs.project }} -v ${{ steps.generate-build-number.outputs.build-number }} -a ${{ inputs.artifact-name }}
