--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -142,7 +142,7 @@ jobs:
 
         ## if IDAES-PSE is already installed, flowsheet export on Dan's branch is not found unless I uninstall first
       - name: Pip uninstall idaes_pse
-        run: pip install -y idaes_pse
+        run: pip uninstall -y idaes_pse
 
       - name: Pip install ${{ inputs.pip-install-target }}
         run: pip install --progress-bar off ${{ inputs.pip-install-target }}
