--- a/.github/workflows/test-electron-build.yml
+++ b/.github/workflows/test-electron-build.yml
@@ -13,7 +13,7 @@ jobs:
             os: [arm64, win64]
             include: 
                 - project: watertap
-                  pip-install-target: watertap@git+https://github.com/watertap-org/watertap@main
+                  pip-install-target: watertap@git+https://github.com/watertap-org/watertap@1.2.0rc0
                   artifact-name: WaterTAP-Flowsheet-Processor
                 - project: prommis
                   pip-install-target: prommis@git+https://github.com/MichaelPesce/prommis@update-entrypoint
