--- a/.github/workflows/test-electron-build.yml
+++ b/.github/workflows/test-electron-build.yml
@@ -2,7 +2,7 @@ name: Test Electron Build
 
 on:
   push:
-    branches: [build]
+    branches: [initial-cleanup]
 
 jobs:
   test-electron-build:
@@ -16,7 +16,7 @@ jobs:
                   pip-install-target: watertap@git+https://github.com/watertap-org/watertap@1.2.0rc0
                   artifact-name: WaterTAP-Flowsheet-Processor
                 - project: prommis
-                  pip-install-target: prommis@git+https://github.com/MichaelPesce/prommis@update-entrypoint
+                  pip-install-target: prommis@git+https://github.com/prommis/prommis@0.6.0rc0
                   artifact-name: PROMMIS-Flowsheet-Processor
                 - project: idaes
                   pip-install-target: idaes-pse@git+https://github.com/dangunter/idaes-pse@west_coast_wrapper
