--- a/.github/workflows/test-electron-build.yml
+++ b/.github/workflows/test-electron-build.yml
@@ -9,7 +9,7 @@ jobs:
         fail-fast: false
         matrix:
             project: [watertap, prommis, idaes]
-            os-version: [arm64, win64]
+            os-version: [macos-latest, windows-latest]
             include: 
                 - project: watertap
                   pip-install-target: watertap@git+https://github.com/watertap-org/watertap@1.2.0rc0
