--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -74,7 +74,7 @@ jobs:
       
         ## handle Apple certificate, keychain setup for mac builds
       - name: Install the Apple certificate
-        if: runner.os == 'macOS'
+        if: runner.os == 'macOS' && env.BUILD_CERTIFICATE_BASE64 != '' && env.P12_PASSWORD != '' && env.KEYCHAIN_PASSWORD != ''
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_BUILD_CERTIFICATE_BASE64 }}
           P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
