add os option for linux, update workflow to handle this; add argument for author in set_configuration and use github.actor for this

--- a/.github/workflows/build-dispatch.yml
+++ b/.github/workflows/build-dispatch.yml
@@ -9,6 +9,7 @@ on:
         options:
           - windows-latest
           - macos-latest
+          - ubuntu-22.04
         default: windows-latest
       project:
         description: "Project name"
