--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -70,13 +70,12 @@ jobs:
         id: get-author
         run: |
           email=$(curl -s -X GET \
-            https://api.github.com/users/${GITHUB_ACTOR} \
+            https://api.github.com/users/${GITHUB_ACTOR}/emails \
             -H 'Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
-            -H 'Accept: application/json' | jq -r '.email')
+            -H 'Accept: application/json' | jq -r '.[] | select(.primary == true) | .email')
           echo "Workflow triggered by: ${{ github.actor }} ($email)"
           echo "EMAIL=$email" >> $GITHUB_OUTPUT
           echo "AUTHOR=${{ github.actor }} <$email>" >> $GITHUB_OUTPUT
-          echo "${{ github.actor }} <$email>"
     
         ## install Azure signtool for windows builds
       - name: Install Azure Signtool
