--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -77,6 +77,20 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           dotnet tool install --global AzureSignTool
+
+        ## handle linux-only actions
+      - name: Install linux packages, remove icons
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ruby-dev build-essential libgfortran5 liblapack3 libgomp1 libblas3
+          sudo gem install --no-document fpm
+          python scripts/remove_icons.py
+
+      - name: Set environment variable
+        if: runner.os == 'Linux'
+        run: |
+          echo "USE_SYSTEM_FPM=true" >> $GITHUB_ENV
       
         ## handle Apple certificate, keychain setup for mac builds
       - name: Install the Apple certificate
