--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -173,6 +173,9 @@ jobs:
         run: |
           python move_entrypoints.py -p ${{ inputs.project }}
 
+      - name: DEBUG - pip freeze
+        run: pip freeze
+
       - name: Build Backend
         working-directory: ./pyinstaller
         run: pyinstaller -y --clean --distpath ../electron/py_dist main.spec
