--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -176,6 +176,9 @@ jobs:
       - name: DEBUG - pip freeze
         run: pip freeze
 
+      - name: Install numpy 2.2.6
+        run: pip install numpy==2.2.6
+
       - name: Build Backend
         working-directory: ./pyinstaller
         run: pyinstaller -y --clean --distpath ../electron/py_dist main.spec
