--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -23,6 +23,8 @@ on:
         default: main
       package-build-number:
         type: string
+      project-version:
+        type: string
       os:
         type: string
     secrets:
@@ -157,7 +159,19 @@ jobs:
 
         ## creates package.json and .env files
       - name: Set configuration files
-        run: python scripts/set_configuration.py -p ${{ inputs.project }} -bv ${{ steps.generate-build-number.outputs.build-number }} -a ${{ inputs.artifact-name }} -au "${{ steps.get-author.outputs.AUTHOR }}"
+        run: |
+          cmd="python scripts/set_configuration.py \
+            -p '${{ inputs.project }}' \
+            -bv '${{ steps.generate-build-number.outputs.build-number }}' \
+            -a '${{ inputs.artifact-name }}' \
+            -au '${{ steps.get-author.outputs.AUTHOR }}'"
+
+          if [ -n "${{ inputs.project-version }}" ]; then
+            cmd="$cmd -pv '${{ inputs.project-version }}'"
+          fi
+
+          echo "Running: $cmd"
+          eval "$cmd"
 
       - name: Install Electron JS dependencies
         working-directory: ./electron
