add python version to run name

--- a/.github/workflows/electron-build.yml
+++ b/.github/workflows/electron-build.yml
@@ -63,7 +63,7 @@ defaults:
 
 jobs:
   electron-build:
-    name: ${{ inputs.os-version }}
+    name: ${{ inputs.os-version }}/Python${{inputs.python-version}}
     runs-on: ${{ inputs.os-version }}
     steps:
       - uses: actions/checkout@v4
